<resources>
    <string name="app_name">pos-android-demo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_mifareCards">Mifare Cards</string>
    <string name="device_not_connect">device not connect</string>
    <string name="end_transaction">ICC transaction end</string>
    <string name="select_app_start">please select app</string>
    <string name="select_app_end">select app end, position = </string>
    <string name="emv_configured">emv is configured</string>
    <string name="emv_not_configured">emv is not configured</string>
    <string name="communicate_test">Communication Command Test</string>
    <string name="result">Result is :</string>
    <string name="test_led_start">LED Test Start</string>
    <string name="test_led_end">LED Test End</string>
    <string name="test_led_red">Red LED Test</string>
    <string name="test_led_yel">Yellow LED Test</string>
    <string name="test_led_blu">Blue LED Test</string>
    <string name="test_led_green">Green LED Test</string>
    <string name="test_buzzer_start">Buzzer Test Start</string>
    <string name="test_buzzer_end">Buzzer Test End</string>
    <string name="icc_test">ICC Test</string>
    <string name="mcr_test">MCR Test</string>
    <string name="nfc_test">NFC Test</string>
    <string name="psam_test">PSAM Test</string>
    <string name="hardware_check">POS Self Test</string>
    <string name="get_version">Get Version</string>
    <string name="msg_pls_insert_card">Please insert card</string>
    <string name="msg_pls_swipe_card">Please swipe card</string>
    <string name="msg_pls_tap_card">Please tap card</string>
    <string name="test_command">Communication Test Command</string>
    <string name="msg_select_device">Click here to scan and connect device</string>
    <string name="msg_do_trade">Click here to start do trade after finish connected</string>
    <string name="msg_disconnect">Click here to disConnected device</string>
    <string name="msg_conn_usb">Click here to find and connect usb</string>
    <string name="device_info">Device Info</string>
    <string name="device_update">Device Update</string>
    <string name="device_operate">Device Operate</string>
    <string name="device_other">Other</string>
    <string name="title_audio">Audio</string>
    <string name="title_uart">Uart</string>
    <string name="title_blu">Bluetooth</string>
    <string name="title_ble">Ble Bluetooth</string>
    <string name="title_welcome">Dspread Pos</string>
    <string name="msg_allowed_location_permission">Location permission is on</string>
    <string name="msg_not_allowed_loaction_permission">Location permission is forbidden, related map functions are not available</string>
    <string name="refreshing">Refreshing</string>
    <string name="audio_open">audio control:open</string>
    <string name="audio_close">audio control:close</string>
    <string name="audio_unknow">audio control:unknown</string>
    <string name="get_pin">Get Pin</string>
    <string name="update">update</string>
    <string name="do_tradelog_operation">TradeLog Operation</string>
    <string name="get_update_key">get UpdateKey</string>
    <string name="reset_qpos">qpos reset</string>
    <string name="upload_logs">Upload logs</string>
    <string name="menu_update">qpos update</string>
    <string name="set_sleepMode_time">set sleep mode time</string>
    <string name="input_pin">Please input pin now</string>
    <string name="input_onlinePin">Please input onlinePin now</string>
    <string name="input_offlinePin">Please input offlinePin now</string>
    <string name="input_offlinePin_last">Please try input last offlinePin</string>
    <string name="swipe_card">Please swipe card now.</string>
    <string name="setBuzzer">setBuzzer</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="getQuickEmvStatus">get Quick Emv Status</string>
    <string name="setQuickEmvStatus">set Quick Emv Status</string>
    <string name="updateEMVByXml">update EMVByXml</string>
    <string name="serial_port">Serial port</string>
    <string name="normal_bluetooth">Normal Blutooth</string>
    <string name="other_blu">BLE Blutooth</string>
    <string name="updateEMV">update EMV</string>
    <string name="updateEMVRID">update EMV RID</string>
    <string name="updateIPEK">update IPEK</string>
    <string name="set_Masterkey">set Masterkey</string>
    <string name="update_WorkKey">update WorkKey</string>
    <string name="serialport">Serial Port</string>
    <string name="mac_error">MAC ERROR</string>
    <string name="cmd_timeout">CMD TIMEOUT</string>
    <string name="pinKsn">pinKsn:</string>
    <string name="trackksn">trackksn:</string>
    <string name="pinBlock">pinBlock:</string>
    <string name="posId">posId:</string>
    <string name="get_pos_id">get PosID</string>
    <string name="operate_mifare">Operate Mifare Cards</string>
    <string name="inject_key_remote">Remote key Loading API</string>
    <string name="getting_pos_id">Getting POS ID…</string>
    <string name="isCardExist">check card in slot</string>
    <string name="card_is_exist">card is exist</string>
    <string name="card_is_not_exist">card is not exist</string>
    <string name="scan_bt_device">scan device</string>
    <string name="scan_usb_device">usb device</string>
    <string name="getId">getPosId</string>
    <string name="poll_card">poll card</string>
    <string name="verify_card">verify card</string>
    <string name="verify_card1">verify card1</string>
    <string name="the_result">Here is the result</string>
    <string name="read_card">read card</string>
    <string name="operate_card">operate</string>
    <string name="write_card">write card</string>
    <string name="transfer_card">Transceive APDU</string>
    <string name="finish_card">finish Mifare card</string>
    <string name="please_select_bt_name">select device</string>
    <string name="open_serial_port">open serial port</string>
    <string name="open_audio">open audio</string>
    <string name="scan_bt_pos_error">no paired bluetooth device\nplease pair bluetooth device first</string>
    <string name="connecting_bt_pos">connecting\nPlease wait…</string>
    <string name="waiting_for_card">Please insert/swipe/tap card now.</string>
    <string name="no_card_detected">Swipe card failed. Please press start to try again.</string>
    <string name="icc_card_inserted">ICC Card Inserted</string>
    <string name="card_inserted">Card Inserted (Not ICC)</string>
    <string name="bad_swipe">Bad Swipe. Please swipe again and press check card.</string>
    <string name="card_swiped">Card Swiped: </string>
    <string name="mag_head_fail">Magnetic head fail</string>
    <string name="card_no_response">Check card no response</string>
    <string name="card_swiped_track2_only">Card Swiped (Track 2 only):\n</string>
    <string name="nfc_track2">Card Tapped (Track 2 Emulation):\n</string>
    <string name="format_id">Format ID: </string>
    <string name="masked_pan">Masked PAN: </string>
    <string name="expiry_date">Expiry Date: </string>
    <string name="cardholder_name">Cardholder Name: </string>
    <string name="ksn">KSN: </string>
    <string name="pin_ksn">PIN KSN:</string>
    <string name="track_ksn">Track KSN:</string>
    <string name="emv_ksn">EMV KSN:</string>
    <string name="uid">UID:</string>
    <string name="service_code">Service Code: </string>
    <string name="track_1_length">Track 1 Length: </string>
    <string name="track_2_length">Track 2 Length: </string>
    <string name="track_3_length">Track 3 Length: </string>
    <string name="encrypted_tracks">Encrypted Tracks: </string>
    <string name="encrypted_track_1">Encrypted Track 1: </string>
    <string name="encrypted_track_2">Encrypted Track 2: </string>
    <string name="encrypted_track_3">Encrypted Track 3: </string>
    <string name="partial_track">Partial Track: </string>
    <string name="card_data">Card Data: </string>
    <string name="do_emv_trade_fail">Start EMV failed</string>
    <string name="do_emv_trade_success">Start EMV success</string>
    <string name="app_version">App Version：</string>
    <string name="bootloader_version">Bootloader Version: </string>
    <string name="firmware_version">Firmware Version: </string>
    <string name="usb">USB: </string>
    <string name="charge">Charge: </string>
    <string name="battery_level">Battery ADC: </string>
    <string name="hardware_version">Hardware Version: </string>
    <string name="supported_track">Supported Track: </string>
    <string name="track_1_supported">Track 1 Supported: </string>
    <string name="track_2_supported">Track 2 Supported: </string>
    <string name="track_3_supported">Track 3 Supported: </string>
    <string name="unknown">Unknown</string>
    <string name="set_amount">Set Amount</string>
    <string name="enter_pin">Please enter PIN</string>
    <string name="enter_pin_try">Please enter PIN (Last %s try)</string>
    <string name="online_process_requested">Online process requested</string>
    <string name="request_data_to_server">Request data to server.</string>
    <string name="replied_connected">Replied connected.</string>
    <string name="replied_success">Replied success.</string>
    <string name="replied_failed">Replied failed.</string>
    <string name="batch_data">Batch Data:\n</string>
    <string name="transaction_log">Transaction Log:\n</string>
    <string name="reversal_data">Reversal Data:\n</string>
    <string name="please_select_app">Please select app</string>
    <string name="transaction_result">Transaction Result</string>
    <string name="transaction_approved">Approved</string>
    <string name="transaction_terminated">Terminated</string>
    <string name="transaction_declined">Declined</string>
    <string name="transaction_cancel">Cancel</string>
    <string name="transaction_capk_fail">Fail (CAPK fail)</string>
    <string name="transaction_not_icc">Fail (Not ICC card)</string>
    <string name="transaction_app_fail">Fail (App fail)</string>
    <string name="transaction_device_error">Pos Error</string>
    <string name="tlv_list">TLV List:\n</string>
    <string name="confirm_amount">Confirm amount</string>
    <string name="get_info">get PosInfo</string>
    <string name="get_key_checkvalue">get PosKeyCheckValue</string>
    <string name="cancel">Cancel</string>
    <string name="pin">PIN</string>
    <string name="cashback_amount">Cashback</string>
    <string name="confirm">Confirm</string>
    <string name="bypass">Bypass</string>
    <string name="get_ksn">Get KSN</string>
    <string name="get_encrypt_data">get_encrypt_data</string>
    <string name="about">About</string>
    <string name="show_log">Logs</string>
    <string name="init_keys">Exchange Certificates</string>
    <string name="verify_keys">Initial Key Loading</string>
    <string name="key_loading">Confirm Key Type</string>
    <string name="updateFirmware">upgrade Firmware (local)</string>
    <string name="setting_exit">Exit</string>
    <string name="input_cashback">InputCashBack</string>
    <string name="printer">Print</string>
    <string name="scan">Scan</string>
    <string name="amount_identification">¥</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="double_zero">00</string>
    <string name="zero_point">0.</string>
</resources>