<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

<!--    <group android:checkableBehavior="single">-->
    <group android:checkableBehavior="none"
        >
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/payment_icon"
            android:title="@string/menu_payment"
            />
<!--        <item-->
<!--            android:id="@+id/nav_autotrade"-->
<!--            android:icon="@drawable/autotrade"-->
<!--            android:title="@string/auto_trade"-->
<!--            />-->

        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/scan"
            android:title="@string/scan"
            />
        <item
            android:id="@+id/nav_deviceinfo"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/device_info"
            />
        <item
            android:id="@+id/nav_deviceupdate"
            android:icon="@drawable/device_update_icon"
            android:title="@string/device_update"
            />
        <item
            android:id="@+id/nav_mifareCards"
            android:icon="@drawable/mifare"
            android:title="@string/menu_mifareCards" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/setting_icon"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_printer"
            android:icon="@drawable/print"
            android:title="@string/printer" />

        <item
            android:id="@+id/nav_log"
            android:icon="@drawable/nav_log"
            android:title="@string/show_log" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/version_upgrade_icon"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/exit_icon"
            android:title="@string/setting_exit" />

    </group>
</menu>