<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <!-- 一级菜单 -->
    <item
        android:title="@string/device_info"
        android:visible="false">

        <!-- 二级菜单 -->
        <menu>
            <item
                android:id="@+id/menu_get_pos_id"
                android:orderInCategory="100"
                android:title="@string/get_pos_id" />
            <item
                android:id="@+id/menu_get_deivce_info"
                android:orderInCategory="100"
                android:title="@string/get_info" />

            <item
                android:id="@+id/get_update_key"
                android:orderInCategory="100"
                android:title="@string/get_update_key" />
            <item
                android:id="@+id/get_device_public_key"
                android:orderInCategory="100"
                android:title="@string/get_device_public_key" />

            <item
                android:id="@+id/menu_get_deivce_key_checkvalue"
                android:orderInCategory="100"
                android:title="@string/get_key_checkvalue" />


            <item
                android:id="@+id/get_ksn"
                android:orderInCategory="100"
                android:title="@string/get_ksn" />
            <item
                android:id="@+id/getEncryptData"
                android:orderInCategory="100"
                android:title="@string/get_encrypt_data" />

        </menu>
    </item>


    <!-- 一级菜单 -->
    <item
        android:title="@string/device_update"
        android:visible="false">

        <!-- 二级菜单 -->
        <menu>

            <!--           <item
                           android:id="@+id/injectKeys"
                           android:orderInCategory="100"
                           android:title="@string/updateInjectKeys" />-->
            <item
                android:id="@+id/updateIPEK"
                android:orderInCategory="100"
                android:title="@string/updateIPEK" />
            <item
                android:id="@+id/getSleepTime"
                android:orderInCategory="100"
                android:title="getSleepTime" />
            <item
                android:id="@+id/updateEMVAPP"
                android:orderInCategory="100"
                android:title="update EMV APP" />
            <item
                android:id="@+id/updateEMVCAPK"
                android:orderInCategory="100"
                android:title="@string/updateEMVRID" />
            <item
                android:id="@+id/setMasterkey"
                android:orderInCategory="100"
                android:title="setMasterkey" />

            <item
                android:id="@+id/three"
                android:orderInCategory="100"
                android:title="clear" />
            <!--            <item
                            android:id="@+id/resetMasterKey"
                            android:orderInCategory="100"
                            android:title="resetMasterKey" />-->
            <item
                android:id="@+id/resetSessionKey"
                android:orderInCategory="100"
                android:title="resetSessionKey" />

            <!--            <item
                            android:id="@+id/resetIpek"
                            android:orderInCategory="100"
                            android:title="resetIpek" />-->
            <item
                android:id="@+id/updateFirmWare"
                android:orderInCategory="100"
                android:title="@string/updateFirmware" />

        </menu>
    </item>


    <!-- 一级菜单 -->
    <item android:title="@string/device_operate">

        <!-- 二级菜单 -->
        <menu>
            <item
                android:id="@+id/get_print_density"
                android:orderInCategory="100"
                android:title="@string/get_print_density" />

            <item
                android:id="@+id/get_print_speed"
                android:orderInCategory="100"
                android:title="@string/get_print_speed" />

            <item
                android:id="@+id/get_print_temperature"
                android:orderInCategory="100"
                android:title="@string/get_print_temperature" />

            <item
                android:id="@+id/get_print_voltage"
                android:orderInCategory="100"
                android:title="@string/get_print_voltage" />

            <item
                android:id="@+id/get_print_status"
                android:orderInCategory="100"
                android:title="@string/get_print_status" />

        </menu>
    </item>

    <!-- 一级菜单 -->
    <item
        android:title="@string/inject_key_remote"
        android:visible="false">

        <!-- 二级菜单 -->
        <menu>
            <item
                android:id="@+id/init_device"
                android:orderInCategory="100"
                android:title="Init Device" />
            <item
                android:id="@+id/menu_exchange_cert"
                android:orderInCategory="100"
                android:title="@string/init_keys" />
            <item
                android:id="@+id/menu_init_key_loading"
                android:orderInCategory="100"
                android:title="@string/verify_keys" />
            <item
                android:id="@+id/menu_confirm_key_type"
                android:orderInCategory="100"
                android:title="@string/key_loading" />
        </menu>
    </item>

    <!-- 一级菜单 -->
    <item android:title="@string/device_other">

        <!-- 二级菜单 -->
        <menu>
            <item
                android:id="@+id/about"
                android:orderInCategory="100"
                android:title="@string/about" />
        </menu>
    </item>

</menu>