<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical"
    tools:context=".ui.fragment.HomeFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="10dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:text="@string/amount_identification"
                android:textColor="@color/black"
                android:textSize="46sp" />

            <TextView
                android:id="@+id/inputMoneyYuanText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="13"
                android:text="@string/zero_point"
                android:textColor="@color/black"
                android:textSize="38sp" />

            <TextView
                android:id="@+id/inputMoneyFenText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="2"
                android:text="@string/double_zero"
                android:textColor="@color/black"
                android:textSize="34sp" />
        </LinearLayout>
    </RelativeLayout>

    <ImageView style="@style/DropLineTheme" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/graye3"
        android:orientation="vertical"
        android:padding="@dimen/dp_1"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_num1"
                style="@style/base_num_button"
                android:layout_marginEnd="@dimen/divider_height"
                android:text="@string/one"/>

            <Button
                android:id="@+id/btn_num2"
                style="@style/base_num_button"
                android:layout_marginEnd="@dimen/divider_height"
                android:text="@string/two" />

            <Button
                android:id="@+id/btn_num3"
                style="@style/base_num_button"
                android:text="@string/three" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/divider_height"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_num4"
                style="@style/base_num_button"
                android:layout_marginEnd="@dimen/divider_height"
                android:text="@string/four" />

            <Button
                android:id="@+id/btn_num5"
                style="@style/base_num_button"
                android:layout_marginEnd="@dimen/divider_height"
                android:text="@string/five" />

            <Button
                android:id="@+id/btn_num6"
                style="@style/base_num_button"
                android:text="@string/six" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/divider_height"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_num7"
                style="@style/base_num_button"
                android:layout_marginEnd="@dimen/divider_height"
                android:text="@string/seven" />

            <Button
                android:id="@+id/btn_num8"
                style="@style/base_num_button"
                android:layout_marginEnd="@dimen/divider_height"
                android:text="@string/eight" />

            <Button
                android:id="@+id/btn_num9"
                style="@style/base_num_button"
                android:text="@string/nine" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/divider_height"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_num00"
                style="@style/base_num_button"
                android:layout_marginEnd="@dimen/divider_height"
                android:text="@string/double_zero" />

            <Button
                android:id="@+id/btn_num0"
                style="@style/base_num_button"
                android:layout_marginEnd="@dimen/divider_height"
                android:text="@string/zero" />

            <ImageView
                android:id="@+id/btn_num_clear"
                style="@style/base_num_button"
                android:scaleType="center"
                android:src="@drawable/delete" />
        </LinearLayout>

        <ImageView style="@style/DropLineTheme" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_amount"></TextView>

            <TextView
                android:id="@+id/tv_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text=""></TextView>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.18"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_button"
            android:padding="10dp"
            android:text="@string/confirm"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>