<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:visibility="gone"
    android:id="@+id/lin_remote_key_load">
    <Button
        android:id="@+id/btn_init_keys"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/init_keys"/>
    <Button
        android:id="@+id/btn_verify_keys"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_keys"/>
    <Button
        android:id="@+id/btn_remote_key_loading"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/key_loading"/>
</LinearLayout>