<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="@color/white"
    android:orientation="vertical" >
    
	<EditText
	    android:id="@+id/pinEditText"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="5dip"
		android:padding="10dp"
	    android:layout_marginRight="5dip"
	    android:hint="@string/pin"
		android:selectAllOnFocus="true"
	    android:inputType="numberPassword" />
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
		android:padding="5dp"
		android:visibility="gone"
	    android:layout_below="@id/pinEditText"
	    android:orientation="horizontal" >
	    
	    <Button
		    android:id="@+id/confirmButton"
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.5"
		    android:text="@string/confirm"
			android:background="@drawable/rounded_button"
			android:textColor="@color/white"
			/>
		
		<Button
		    android:id="@+id/bypassButton"
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
			android:layout_marginLeft="5dp"
		    android:layout_weight="0.5"
		    android:text="@string/bypass"
			android:background="@drawable/rounded_button"
			android:textColor="@color/white"/>
		
		<Button
		    android:id="@+id/cancelButton"
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.5"
			android:layout_marginLeft="5dp"
		    android:text="@string/cancel"
			android:background="@drawable/rounded_button"
			android:textColor="@color/white"/>
		
	</LinearLayout>
	    
</RelativeLayout>